--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -17,3 +17,7 @@
 /* add padding  */
 .left-addon input  { padding-left:  30px; }
 .right-addon input { padding-right: 30px; }
+
+.btn-info {
+  background-color: #337ab7 !important;
+}
